# comfyui_functional

./: README.md  __init__.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md
comfyui_functional/: __init__.py  code.py  comfy_client.py  core.py  high_level.py  hook.py  logic.py  nodes.py  remote.py  side_effects.py  transform.py  utils.py
docs/: implementation.md  node-reference.md  usage.md
example_workflows/: functional-inspect.json  functional-list-param.json  functional-map.json  functional-nested-calls.json  functional-recursion.json  functional-sow-reap.json
web/js/: appearance.js  dynamic_node.js
